# flakyguard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/flakyguard/: __init__.py  cli.py  plugin.py  reporter.py
src/flakyguard/adapters/: storage.py
src/flakyguard/core/: detector.py  models.py  quarantine.py
src/flakyguard/ports/: protocols.py
tests/integration/: test_storage.py
tests/unit/: test_cli.py  test_detector.py  test_models.py  test_plugin.py  test_quarantine.py  test_reporter.py
