[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flakyguard"
version = "0.1.0"
description = "Zero-config pytest plugin to detect, track and manage flaky tests"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FlakyGuard Contributors" }
]
keywords = ["pytest", "testing", "flaky", "unstable", "ci", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pyright>=1.1",
    "deptry>=0.12",
    "pip-audit>=2.6",
]

[project.entry-points."pytest11"]
flakyguard = "flakyguard.plugin"

[project.scripts]
flakyguard = "flakyguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flakyguard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
reportUnknownParameterType = false
reportMissingParameterType = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
branch = true
source = ["src/flakyguard"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.deptry]
extend_exclude = ["tests"]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["coverage", "ruff", "mypy", "pyright", "deptry", "pip-audit"]
DEP003 = ["flakyguard"]
